fix: try to change the logic behind the colors in Collector

--- a/src/components/collectors/Collector.module.scss
+++ b/src/components/collectors/Collector.module.scss
@@ -5,9 +5,6 @@
 .container{
     width: 340px;
     height: 76px;
-}
-
-.container.dark{
     background-color: rgba(colors.$primary_main, 10%);
 }
 
@@ -29,9 +26,8 @@
     font-weight: 900;
     padding-top: 7px;
     padding-left: 10px;
-}
-.col_num.dark{
     background-color: rgba(colors.$primary_main, 20%);
+
 }
 
 .col_num.light{
